Invalid Argument when mounting smb share
I do get an "Invalid Argument" error when trying to mount an smb share with gvfs with the fix from !138 (merged). The problem was initially fixed and now occurs again.
(Package) Versions
[~] <> * yay -Q gvfs gvfs-smb smbclient
gvfs 1.50.0+r5+g747c7f6e-1
gvfs-smb 1.50.0+r5+g747c7f6e-1
smbclient 4.16.0-5
[~] <> * smbclient -V
Version 4.16.0
As far as I can tell the most recent version of gvfs-smb
includes the fix from !138 (merged).
Steps to reproduce
- Have an up to date Arch system and a SMB-Share that can be mounted anonymously
- Install packages for gvfs smb:
sudo pacman -S gvfs gvfs-smb
(smbclient
is a dependency ofgvfs-smb
) - Try to mount share with gvfs (e.g. with
gio
):gio mount -a smb://host.addr/share
Logs
See gvfsd.log.gio for the log when trying to mount with gio
and gvfsd.log.thunar for the try with thunar
.
I have replaced the domain and IP of my host with <DOMAIN>
and <IP>
respectively.
Issue #611 (closed) is probably related.