smb: Rework anonymous handling to avoid EINVAL

After the recent samba change, the "Invalid Argument" error can be still
returned when anonymous login is requested even after the commit 747c7f6.
This is because `smbc_setOptionNoAutoAnonymousLogin` is called after returning
from the `auth_callback` function (i.e. there is one redundant iteration).
Let's rework the handling a bit and call that immediately, which bypasses
the issue.

Fixes: https://gitlab.gnome.org/GNOME/gvfs/-/issues/619